hecho vista para un personaje

--- a/src/app/character/components/card/card.component.html
+++ b/src/app/character/components/card/card.component.html
@@ -1,7 +1,8 @@
-<ion-card>
+<ion-card (click)="openCharacter(character?.id!)">
     <img [src]="character?.image" [alt]="character?.name">
 
     <ion-card-header>
       <ion-card-title>{{character?.name}}</ion-card-title>
     </ion-card-header>
+    
 </ion-card>
